<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cv_news"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="1dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:dividerHeight="0.0px"
    android:elevation="8dp"
    card_view:cardElevation="10dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:id="@+id/linear_layout_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/news_title"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_news_post_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/post_by"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_news_post_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1.5"
                android:text="@string/post_by_name"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_news_posted_on_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/posted_on"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_news_posted_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1.5"
                android:text="@string/posted_on_date"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>



            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_news_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/image_default"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                />


        <TextView
            android:id="@+id/tv_news_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:text="@string/news_title"
            android:textColor="#000"
            android:textIsSelectable="true"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

